--- a/blogspod.html
+++ b/blogspod.html
@@ -7,8 +7,12 @@
 </head>
 
 <body>
-<h1> Aqui haremos el blog</h1>
-<p> parrafo del post</p>
+    <div id="container">
+    <div id="cabecera">
+        Cabecera
+    <div id="post">
+<h1> Titulo atrativo del blog</h1>
+<p> parrafo del post se rellena para trabajar nuevos conceptos</p>
 
 
 </body>
