Terminamos el trabajo de cabecera 1ra version

--- a/blogspod.html
+++ b/blogspod.html
@@ -9,9 +9,11 @@
 <body>
     <div id="container">
     <div id="cabecera">
-        Cabecera
+        Hyperblog
+        <span id="tagline"> Tu blog de confianza</span>
+    </div>
     <div id="post">
-<h1> Titulo atrativo del blog</h1>
+<h1> Titulo atractivo del blog</h1>
 <p> parrafo del post se rellena para trabajar nuevos conceptos</p>
 
 
