--- a/blogspod.html
+++ b/blogspod.html
@@ -9,6 +9,9 @@
 <body>
 <h1> Aqui haremos el blog</h1>
 <p> parrafo del post</p>
+<p>
+    Nuevo parrafo que se vera en el merge que realizaremos con la cabecera
+</p>
 
 
 </body>
