Haciendo merge correctamente

--- a/blogspod.html
+++ b/blogspod.html
@@ -14,7 +14,7 @@
     </div>
     <div id="post">
 <h1> Titulo atractivo del blog</h1>
-<p> parrafo del post se rellena para trabajar nuevos conceptos</p>
+<p> parrafo del post se rellena para trabajar nuevos conceptos "Unico cambio master"</p>
 
 
 </body>
